# bug-tracker

./: CMakeLists.txt  README.md  main.cpp
db/: credentials.db
src/: Authenticator.cpp  Authenticator.hpp  Bug.cpp  Bug.hpp  BugManager.cpp  BugManager.hpp  BugNullObject.cpp  BugNullObject.hpp  Database.cpp  Database.hpp  Manager.cpp  Manager.hpp  Menu.cpp  Menu.hpp  Programmer.cpp  Programmer.hpp  Root.cpp  Root.hpp  System.cpp  System.hpp  Tester.cpp  Tester.hpp  User.cpp  User.hpp  UserManager.cpp  UserManager.hpp  UserRole.cpp  UserRole.hpp
test/: AuthenticatorTest.cpp  BugManager.cpp  BugManagerTest.cpp  BugTest.cpp  UserManagerTest.cpp  test.cpp
